Remembers the last playing song on restart.

I think I've fixed the problems with the OSD appearing briefly at startup. At 
least, there is no sign of metaDataChanged() in the console output.

This does however expose Playlist::Actions::m_nextTrackCandidate with the 
requestTrack() function. I'm hoping nobody has a problem with this =)

BUG:168789


svn path=/trunk/extragear/multimedia/amarok/; revision=886800